mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
[Jun 06 2009] - Jamdog
  Bug-Fix: prefedit: Editing screenwidth was setting pagelength value (thanks drefs)
[Jun 02 2009] - Jamdog
  Bug-Fix: furniture now will throw players to the floor when it is removed, and also count correctly. (Thanks MTFox)
[Jun 01 2009] - Jamdog
  Bug-Fix: toggle command not fully fixed in last update (sorry) - It's fixed this time!
[May 28 2009] - Jamdog
  Bug-Fix: toggle command broke adding autodoor/autokey - toggle color command is usable again!
[May 24 2009] - Jamdog
  Bug-Fix: sedit, copy shop option was causing a crash (Thanks slicer)
[May 21 2009] - Jamdog
  Added autoassist, autoloot, autogold, autosplit, autosacrifice and automap commands.
  Added autodoor toggle and command (autofind next door when opening/closing/unlocking/picking)
  Added autokey toggle and command (autounlock door when opening, if holding the key)
  Added prefedit OLC for players to set their toggles and preferences
  Re-arranged IS_PLAYING define to make it more efficient
[May 15 2009] - Jamdog
  Fixed variable definition halfway through do_oasis_zedit to allow compilation in MSVC. (thanks Lyceq)
  Crash-Bug-Fix: Added check for attacker and victim in the hit function (thanks Lyceq)
[May 13 2009] - Jamdog
  Bug-Fix: quest join check for previous quest completion, and validation checks for prev and next quests in qedit. (thanks drefs)
[Apr 13 2009] - Jamdog
  Bug-Fix: Shopping for multiple items caused an occasional crash due to NULL variable - now fixed (I hope)
[Apr 12 2009] - Jamdog
  Bug-Fix: Stat player displayed current quest information incorrectly - fixed 'if'
[Apr 11 2009] - Jamdog